--- a/style_1.css
+++ b/style_1.css
@@ -8,17 +8,87 @@ and open the template in the editor.
     Author     : chaillma
 */
 
-nav{
-    background-color: blue;
+nav ul{
+    //background-color: blue;
+    background: -moz-linear-gradient(blue, white);
+    border-radius: 25px;
     //color:white;
-    display:block;
-    height: 50px;
-    
+    //display:block;
+    //height: 50px;
+    overflow:hidden;
+    margin: 0;
+    list-style-type: none;
+   
 }
-nav a{
-    padding-left: 15px;
-    padding-right: 15px;
-    color: white;
+nav li{
+    //padding-left: 15px;
+    //padding-right: 15px;
+    //color: white;
+    //text-decoration: none;
+    //margin: 50px;
+    float:left;
+    //border:solid;
+}
+nav li a{
+    color:white;
+    margin: 0px;
+    padding: 10px;
+    display:block;
+    font-weight: bold;
     text-decoration: none;
-    margin: 100px;
+}
+
+
+/* Change the link color on hover */
+li a:hover {
+    //background-color: #6699ff;
+     background: -moz-linear-gradient( #4d4dff, white);
+    color: white;
+}
+
+#diplome{
+border-style: solid;
+background-color: grey;
+//float: right;
+height: 500px;
+}
+
+#civil img{
+float: left;
+margin: 40px;
+}
+
+#arbre span{
+width: 2%;
+//padding-left: 10px;
+//padding-right: 10px;
+padding-top: 35px;
+padding-bottom: 35px;
+//height: 140px;
+border-style: solid;
+margin:0px;
+display:inline-block;
+}
+
+#arbre {
+width: 100%;
+position: fixed;
+bottom:0px;
+height: 150px;
+}
+
+#arbre img{
+width: 100%;
+height: 150px;
+margin:0px;
+//float: left; }
+
+#arbre div{
+position: relative;
+bottom: 125px;
+left:10px;
+}
+
+.fond_scolarite{
+background-color: red;
 }
