--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ height: 150px;
 width: 100%;
 height: 150px;
 margin:0px;
-//float: left; }
+//float: left; 
+}
 
 #arbre div{
 position: relative;
@@ -91,4 +92,15 @@ left:10px;
 
 .fond_scolarite{
 background-color: red;
+}
+
+#table{
+    border: 1px;
+    border-style: solid;
+    padding:0px;
+    margin: 0px;
+    
+}
+.periode_embl{
+    background-color: green;
 }
